vlib/v/checker/tests/unsafe_none_return_err.vv
fn f() ?int {
	return unsafe { none }
}
